Implement Resource catalogue query vertical slice
